# lumio

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml
contracts/agent-registry/: Cargo.toml
contracts/agent-registry/src/: contract.rs  interface.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/prepaid-vault/: Cargo.toml
contracts/prepaid-vault/src/: contract.rs  lib.rs  storage.rs  test.rs  types.rs  utils.rs
docs/: runner-operations.md
scripts/: bootstrap-agent.sh  ensure-runner-account.mjs  watch-contracts.mjs
src/: App.module.css  App.tsx  index.css  main.tsx
src/components/: ConnectAccount.module.css  ConnectAccount.tsx  FundAccountButton.module.css  FundAccountButton.tsx  LumioLogo.module.css  LumioLogo.tsx  NetworkPill.module.css  NetworkPill.tsx  WalletButton.module.css  WalletButton.tsx
src/components/agents/: AgentCard.module.css  AgentCard.tsx  (+2 more)
src/contracts/: agent_registry.ts  guess_the_number.ts  prepaid_vault.ts
src/data/: mock.ts
src/hooks/: useGeminiApiKey.ts  useSmartWallet.ts  useSubscription.ts  useVaultBalance.ts
src/pages/: Builder.module.css  Builder.tsx  Developers.module.css  Developers.tsx  History.module.css  History.tsx  Home.module.css  Home.tsx  Wallet.module.css  Wallet.tsx
src/providers/: SmartWalletProvider.tsx  WalletProvider.tsx
src/services/: gemini.ts  http.ts  runner.ts  stellarAccount.ts
src/types/: smartWallet.ts  workflows.ts
src/util/: amount.ts  format.ts  pricing.ts  storage.ts  templates.ts  workflows.ts
(+5 files in other folders)
