[package]
name = "agent-registry"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
version.workspace = true

[features]
default = ["contract"]
contract = []
interface = []

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
